--- a/src/visualization/components/internal/StaticLegend.scss
+++ b/src/visualization/components/internal/StaticLegend.scss
@@ -9,6 +9,7 @@
   margin-bottom: $cf-marg-b;
 }
 
-.latest-x-axis {
+.latest-x-axis,
+.static-legend-height-slider {
   margin-bottom: $cf-marg-c;
 }
